--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@madzadev/audio-player": "^2.1.14",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
